# code_dmdreader

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md  bw.json  cleanup-raspbian.sh  compile-pi.sh  compile-raspi.txt  copyright.txt  debug.json  debugconfig.json  democonfig.json  dmdreader.cpp  gb.json  install-pi-software.sh  install.md  links.md  pi-configure  pi-enable-spi  test.cpp
configs/: bw.json  democonfig.json  spi-store.json
dmd/: color.cpp  color.h  color.hpp  dmddata.h  dmdframe.cpp  dmdframe.h  dmdframe.hpp  dmdsource.cpp  dmdsource.h  frameinfologger.cpp  frameinfologger.h  frameprocessor.cpp  frameprocessor.h  maskeddmdframe.cpp  maskeddmdframe.h  maskeddmdframe.hpp  maskedmdframe.cpp  palette.cpp  palette.h  palette.hpp  palette_colorizer.cpp  palette_colorizer.h  pubcapture.cpp  pubcapture.h
dmdsource/: datdmdsource.cpp  datdmdsource.h  datdmdsource.hpp  dmdsource.cpp  dmdsource.h  dmdsource.hpp  nullsource.cpp  nullsource.h  nullsource.hpp  pngsource.cpp  pngsource.h  pngsource.hpp  spisource.cpp  spisource.h  spisource.hpp  txtdmdsource.cpp  txtdmdsource.h  txtdmdsource.hpp
doc/: colorisations.md  development.md  examples.md  install.md  modules.md  opengl.md  vni.md
drm/: avrenderframe.cpp  avrenderframe.hpp  drmframebuffer.cpp  drmframebuffer.hpp  drmhelper.cpp  drmhelper.hpp  drmprimeout.cpp  drmprimeout.hpp  renderframe.cpp  renderframe.hpp  videofile.cpp  videofile.hpp  videofileloader.cpp  videofileloader.hpp  videoplayer.cpp  videoplayer.hpp
img/: circle.psd  circle_blurred.psd  dmd_sample.psd
processor/: frameinfologger.cpp  frameinfologger.h  frameinfologger.hpp  frameprocessor.cpp  frameprocessor.h  frameprocessor.hpp  framestore.cpp  framestore.h  framestore.hpp  fulllevel.cpp  fulllevel.hpp  genericwriter.cpp  genericwriter.hpp  palettecolorizer.cpp  palettecolorizer.h  palettecolorizer.hpp  patterndetector.cpp  patterndetector.hpp  patternmatcher.cpp  patternmatcher.hpp  pngwriter.cpp  pngwriter.hpp  pubcapture.cpp  pubcapture.h  pubcapture.hpp  pupcapture.cpp  pupcapture.hpp  ratelimit.cpp  ratelimit.hpp  serumcolorizer.cpp  serumcolorizer.hpp  statedetector.cpp  statedetector.hpp  txtwriter.cpp  txtwriter.hpp  upscale.cpp  upscale.hpp  upscalex2.cpp  upscalex2.hpp
processor/vni/: animation.cpp  animation.hpp  animationframe.cpp  animationframe.hpp  animationplane.cpp  animationplane.hpp  animationset.cpp  animationset.hpp  config.hpp  heatshrink_config.hpp  heatshrink_decoder.cpp  heatshrink_decoder.hpp  palcoloring.cpp  palcoloring.hpp  palette_colorizer.cpp  palette_colorizer.hpp  palmapping.cpp  palmapping.hpp  palpalette.cpp  palpalette.hpp  streamhelper.cpp  streamhelper.hpp  switchmode.cpp  switchmode.hpp  vnianimation.cpp  vnianimation.hpp  vnianimationframe.cpp  vnianimationframe.hpp  vnianimationplane.cpp  vnianimationplane.hpp  vnianimationset.cpp  vnianimationset.hpp  vnicolorisation.cpp  vnicolorisation.hpp
pupplayer/: internalpupplayer.cpp  internalpupplayer.hpp  json.hpp  pivid.cpp  pivid.hpp  pividpupplayer.cpp  pividpupplayer.hpp  playlist.cpp  playlist.hpp  pupplayer.cpp  pupplayer.hpp  screen.cpp  screen.hpp  trigger.cpp  trigger.hpp
render/: framerenderer.cpp  framerenderer.h  framerenderer.hpp  gladopenglrenderer.cpp  gladopenglrenderer.h  gladopenglrenderer.hpp  ledmatrixrenderer.cpp  ledmatrixrenderer.hpp  ogl-common.cpp  ogl-common.h  ogl-pi4.cpp  ogl-pi4.h  openglrenderer.cpp  openglrenderer.h  openglrenderer.hpp  openglshader.cpp  openglshader.h  openglshader.hpp  pi4renderer.cpp  pi4renderer.h  pi4renderer.hpp  raylibrenderer.cpp  raylibrenderer.h  shader-definitions.h  shader.h
rpi/: drmdemo.c  drmdemo.h  drmframebuffer.cpp  drmframebuffer.hpp  drmhelper.cpp  drmhelper.h  drmhelper.hpp  drmprime_out.c  drmprime_out.cpp  drmprime_out.h  gpio.cpp  gpio.h  gpio.hpp  gpionew.cpp  gpionew.hpp  spi.cpp  spi.h  spihelper.cpp  videoplayer.cpp  videoplayer.h  videoplayer.hpp
sample-configs/: democonfig.json  dumpspi.json  pispi.json  spi-store.json
samples/: bw.json  democonfig.json  display-spi.json  dmd-to-led.json  dmd-to-ledx2.json  dump-spi.json  dumpspi.json  led_and_lcd.json  pivid.json  rgb.json  tron-256x64.json
samples/fonts/: gb_digits_3x5.psd  gb_digits_3x7.psd  gb_digits_4x6.psd  gb_digits_4x8.psd  gb_digits_5x8.psd  gb_digits_6x8.psd  gb_digits_7x10.psd  gb_digits_9x12.psd
samples/gb_fonts/: gb_digits_3x5.psd  gb_digits_5x8.psd  gb_digits_6x8.psd  gb_digits_7x12.psd  gb_digits_9x12.psd
samples/pins/: sttng.json
services/: pupeventplayback.cpp  pupeventplayback.hpp  service.cpp  service.hpp  serviceregistry.cpp  serviceregistry.hpp
shaders/: ogl-128x32.fs  ogl-256x64-upsampled.fs  ogl-256x64.fs  ogl-debug_red.fs  ogl-nodots.fs  ogl.vs  pi4-128x32.fs  pi4-192x64.fs  pi4-256x64-upsampled.fs  pi4-nodots.fs  pi4.vs
test/: drmtest.cpp  drmtest.hpp  pividtest.cpp  pividtest.hpp  scoredetector.cpp  scoredetector.hpp
util/: bithelper.cpp  bithelper.h  bmp.cpp  bmp.h  bmp.hpp  counter.cpp  counter.hpp  crc32.cpp  crc32.h  crc32.hpp  data.cpp  data.hpp  endian.cpp  endian.h  glob.cpp  glob.hpp  image.cpp  image.h  image.hpp  numutils.cpp  numutils.h  objectfactory.cpp  objectfactory.h  objectfactory.hpp  profiler.cpp  profiler.hpp  time.hpp
